# JMIntel

./: .env.example  .gitignore  pyproject.toml
notebooks/: 01_data_inspection.ipynb  02_data_cleaning.ipynb  03_descriptive_analysis.ipynb
scripts/: scrape_jobs.py
src/ai_services/: base_ai_service.py  gemini_service.py  job_processor.py
src/databases/: base_repository.py  sqlite_repository.py
src/models/: job.py
src/scrapers/: base_scraper.py  linkedin_scraper.py
src/scraping/: linkedin_scraper.py
